--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <h3 class="action-title">Profile Settings</h3>
                 <p class="action-description">Update your profile information, change password, and customize your account settings.</p>
-                <a href="#" class="action-button">
+                <a href="{{ url_for('edit_profile') }}" class="action-button">
                     <i class="fas fa-edit"></i>
                     Edit Profile
                 </a>
