--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -95,9 +95,10 @@
                 </div>
                 <h3 class="action-title">Analytics</h3>
                 <p class="action-description">Track your content performance and understand your audience better with detailed analytics.</p>
-                <a href="#" class="action-button">
-                    <i class="fas fa-analytics"></i>
+                <a href="{{ url_for('stats') }}" class="action-button">
+                    <i class="fas fa-chart-line"></i>
                     View Stats
+                </a>
                 </a>
             </div>
 
